# name_photo_matching

./: .gitignore  pyproject.toml
src/name_photo_matching/: cli_functions.py  clip_functions.py  gcs.py  main.py  utils.py
src/name_to_photo_matching/: utils.py
